stderr
HikerTest.java:16: error: ';' expected
            assertFalse()
                         ^
1 error
